# percy

./: .env  README.md  background.py  concurrency_control.py  config.toml  context_management.py  debug_logger.py  main.py  memory.py  percy.py  percy_datatypes.py  percy_graph.py  percy_session.py  pyproject.toml  speech.py  test.py  text_main.py  tool_call_middleware.py  voice_main.py
data/memory/: session_file.pk1
memory/: session_file.pk1
percy/: agent.py  app.py  config.py  streaming.py  theme.py  usage.py
percy/ui/: app.py  renderers.py
