[project]
name = "percy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ventures-agent-framework",
  "rich",
  "prompt-toolkit",
  "numpy>=2.4.2",
  "scipy>=1.17.1",
  "tiktoken>=0.12.0",
  "neo4j>=5.20.0",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
ventures-agent-framework = { path = "../ventures_agent_framework" }
