[project]
name = "percy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich",
    "textual>=8.2.3",
    "ventures-agent-framework",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
ventures-agent-framework = { path = "../ventures_agent_framework" }
